--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@ html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#root {
+  width: 100%;
+  min-height: 100vh;
+}
+
 body {
   font-size: 1.6rem;
   display: flex;
