--- a/src/components/ThemeIcon/ThemeIcon.css
+++ b/src/components/ThemeIcon/ThemeIcon.css
@@ -1,5 +1,9 @@
-.theme-icon {
+.theme-icon-container {
   position: fixed;
-  top: 2rem;
-  right: 2rem;
+  top: 4rem;
+  right: 3.5rem;
+}
+
+.theme-icon {
+  cursor: pointer;
 }
