Se terminó de probar figma tokens con un componente de react

--- a/output/css/variables.css
+++ b/output/css/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Fri, 13 Jan 2023 18:00:03 GMT
+ * Generated on Mon, 16 Jan 2023 22:09:09 GMT
  */
 
 :root {
@@ -35,7 +35,7 @@
   --material-theme-sys-light-on-primary-container: #0e0465;
   --material-theme-sys-light-on-primary: #ffffff;
   --material-theme-sys-light-primary-container: #e2dfff;
-  --material-theme-sys-light-primary: #5554aa;
+  --material-theme-sys-light-primary: #a2f200;
   --material-theme-sys-dark-surface-tint: #c2c1ff;
   --material-theme-sys-dark-surface-tint-color: #c2c1ff;
   --material-theme-sys-dark-on-error-container: #ffb4ab;
@@ -64,7 +64,7 @@
   --material-theme-sys-dark-on-primary-container: #e2dfff;
   --material-theme-sys-dark-on-primary: #262379;
   --material-theme-sys-dark-primary-container: #3d3c90;
-  --material-theme-sys-dark-primary: #c2c1ff;
+  --material-theme-sys-dark-primary: #0400ff;
   --material-theme-ref-error-error0: #000000;
   --material-theme-ref-error-error10: #410002;
   --material-theme-ref-error-error20: #690005;
@@ -180,4 +180,175 @@
   --material-theme-key-colors-error: #ba1a1a;
   --material-theme-key-colors-neutral: #5f5e62;
   --material-theme-key-colors-neutral-variant: #5f5d67;
+  --material-theme-label-medium-font-family: Roboto;
+  --material-theme-label-medium-font-weight: Medium;
+  --material-theme-label-medium-line-height: 16;
+  --material-theme-label-medium-font-size: 12;
+  --material-theme-label-medium-letter-spacing: 0.5;
+  --material-theme-label-medium-paragraph-spacing: 0;
+  --material-theme-label-medium-paragraph-indent: 0px;
+  --material-theme-label-medium-text-case: none;
+  --material-theme-label-medium-text-decoration: none;
+  --material-theme-label-small-font-family: Roboto;
+  --material-theme-label-small-font-weight: Medium;
+  --material-theme-label-small-line-height: 16;
+  --material-theme-label-small-font-size: 11;
+  --material-theme-label-small-letter-spacing: 0.5;
+  --material-theme-label-small-paragraph-spacing: 0;
+  --material-theme-label-small-paragraph-indent: 0px;
+  --material-theme-label-small-text-case: none;
+  --material-theme-label-small-text-decoration: none;
+  --material-theme-label-large-font-family: Roboto;
+  --material-theme-label-large-font-weight: Medium;
+  --material-theme-label-large-line-height: 20;
+  --material-theme-label-large-font-size: 14;
+  --material-theme-label-large-letter-spacing: 0.1;
+  --material-theme-label-large-paragraph-spacing: 0;
+  --material-theme-label-large-paragraph-indent: 0px;
+  --material-theme-label-large-text-case: none;
+  --material-theme-label-large-text-decoration: none;
+  --material-theme-body-small-font-family: Roboto;
+  --material-theme-body-small-font-weight: Regular;
+  --material-theme-body-small-line-height: 16;
+  --material-theme-body-small-font-size: 12;
+  --material-theme-body-small-letter-spacing: 0.4;
+  --material-theme-body-small-paragraph-spacing: 0;
+  --material-theme-body-small-paragraph-indent: 0px;
+  --material-theme-body-small-text-case: none;
+  --material-theme-body-small-text-decoration: none;
+  --material-theme-body-medium-font-family: Roboto;
+  --material-theme-body-medium-font-weight: Regular;
+  --material-theme-body-medium-line-height: 20;
+  --material-theme-body-medium-font-size: 14;
+  --material-theme-body-medium-letter-spacing: 0.25;
+  --material-theme-body-medium-paragraph-spacing: 0;
+  --material-theme-body-medium-paragraph-indent: 0px;
+  --material-theme-body-medium-text-case: none;
+  --material-theme-body-medium-text-decoration: none;
+  --material-theme-body-large-font-family: Roboto;
+  --material-theme-body-large-font-weight: Regular;
+  --material-theme-body-large-line-height: 24;
+  --material-theme-body-large-font-size: 16;
+  --material-theme-body-large-letter-spacing: 0.5;
+  --material-theme-body-large-paragraph-spacing: 0;
+  --material-theme-body-large-paragraph-indent: 0px;
+  --material-theme-body-large-text-case: none;
+  --material-theme-body-large-text-decoration: none;
+  --material-theme-headline-small-font-family: Roboto;
+  --material-theme-headline-small-font-weight: Regular;
+  --material-theme-headline-small-line-height: 32;
+  --material-theme-headline-small-font-size: 24;
+  --material-theme-headline-small-letter-spacing: 0%;
+  --material-theme-headline-small-paragraph-spacing: 0;
+  --material-theme-headline-small-paragraph-indent: 0px;
+  --material-theme-headline-small-text-case: none;
+  --material-theme-headline-small-text-decoration: none;
+  --material-theme-headline-medium-font-family: Roboto;
+  --material-theme-headline-medium-font-weight: Regular;
+  --material-theme-headline-medium-line-height: 36;
+  --material-theme-headline-medium-font-size: 28;
+  --material-theme-headline-medium-letter-spacing: 0%;
+  --material-theme-headline-medium-paragraph-spacing: 0;
+  --material-theme-headline-medium-paragraph-indent: 0px;
+  --material-theme-headline-medium-text-case: none;
+  --material-theme-headline-medium-text-decoration: none;
+  --material-theme-headline-large-font-family: Roboto;
+  --material-theme-headline-large-font-weight: Regular;
+  --material-theme-headline-large-line-height: 40;
+  --material-theme-headline-large-font-size: 32;
+  --material-theme-headline-large-letter-spacing: 0%;
+  --material-theme-headline-large-paragraph-spacing: 0;
+  --material-theme-headline-large-paragraph-indent: 0px;
+  --material-theme-headline-large-text-case: none;
+  --material-theme-headline-large-text-decoration: none;
+  --material-theme-display-small-font-family: Roboto;
+  --material-theme-display-small-font-weight: Regular;
+  --material-theme-display-small-line-height: 44;
+  --material-theme-display-small-font-size: 36;
+  --material-theme-display-small-letter-spacing: 0%;
+  --material-theme-display-small-paragraph-spacing: 0;
+  --material-theme-display-small-paragraph-indent: 0px;
+  --material-theme-display-small-text-case: none;
+  --material-theme-display-small-text-decoration: none;
+  --material-theme-display-medium-font-family: Roboto;
+  --material-theme-display-medium-font-weight: Regular;
+  --material-theme-display-medium-line-height: 52;
+  --material-theme-display-medium-font-size: 45;
+  --material-theme-display-medium-letter-spacing: 0%;
+  --material-theme-display-medium-paragraph-spacing: 0;
+  --material-theme-display-medium-paragraph-indent: 0px;
+  --material-theme-display-medium-text-case: none;
+  --material-theme-display-medium-text-decoration: none;
+  --material-theme-display-large-font-family: Roboto;
+  --material-theme-display-large-font-weight: Regular;
+  --material-theme-display-large-line-height: 64;
+  --material-theme-display-large-font-size: 57;
+  --material-theme-display-large-letter-spacing: -0.25;
+  --material-theme-display-large-paragraph-spacing: 0;
+  --material-theme-display-large-paragraph-indent: 0px;
+  --material-theme-display-large-text-case: none;
+  --material-theme-display-large-text-decoration: none;
+  --material-theme-title-small-font-family: Roboto;
+  --material-theme-title-small-font-weight: Medium;
+  --material-theme-title-small-line-height: 20;
+  --material-theme-title-small-font-size: 14;
+  --material-theme-title-small-letter-spacing: 0.1;
+  --material-theme-title-small-paragraph-spacing: 0;
+  --material-theme-title-small-paragraph-indent: 0px;
+  --material-theme-title-small-text-case: none;
+  --material-theme-title-small-text-decoration: none;
+  --material-theme-title-medium-font-family: Roboto;
+  --material-theme-title-medium-font-weight: Medium;
+  --material-theme-title-medium-line-height: 24;
+  --material-theme-title-medium-font-size: 16;
+  --material-theme-title-medium-letter-spacing: 0.15;
+  --material-theme-title-medium-paragraph-spacing: 0;
+  --material-theme-title-medium-paragraph-indent: 0px;
+  --material-theme-title-medium-text-case: none;
+  --material-theme-title-medium-text-decoration: none;
+  --material-theme-title-large-font-family: Roboto;
+  --material-theme-title-large-font-weight: Regular;
+  --material-theme-title-large-line-height: 28;
+  --material-theme-title-large-font-size: 22;
+  --material-theme-title-large-letter-spacing: 0%;
+  --material-theme-title-large-paragraph-spacing: 0;
+  --material-theme-title-large-paragraph-indent: 0px;
+  --material-theme-title-large-text-case: none;
+  --material-theme-title-large-text-decoration: none;
+  --font-families-roboto: Roboto;
+  --line-heights-0: 16;
+  --line-heights-1: 20;
+  --line-heights-2: 24;
+  --line-heights-3: 32;
+  --line-heights-4: 36;
+  --line-heights-5: 40;
+  --line-heights-6: 44;
+  --line-heights-7: 52;
+  --line-heights-8: 64;
+  --line-heights-9: 28;
+  --font-weights-roboto-0: Medium;
+  --font-weights-roboto-1: Regular;
+  --font-size-0: 11;
+  --font-size-1: 12;
+  --font-size-2: 14;
+  --font-size-3: 16;
+  --font-size-4: 22;
+  --font-size-5: 24;
+  --font-size-6: 28;
+  --font-size-7: 32;
+  --font-size-8: 36;
+  --font-size-9: 45;
+  --font-size-10: 57;
+  --letter-spacing-0: 0.5;
+  --letter-spacing-1: 0.1;
+  --letter-spacing-2: 0.4;
+  --letter-spacing-3: 0.25;
+  --letter-spacing-4: 0%;
+  --letter-spacing-5: -0.25;
+  --letter-spacing-6: 0.15;
+  --paragraph-spacing-0: 0;
+  --text-case-none: none;
+  --text-decoration-none: none;
+  --paragraph-indent-0: 0px;
+  --token-set-order-0: Prueba1;
 }
